--- a/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Closed.cshtml
+++ b/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/Closed.cshtml
@@ -15,31 +15,42 @@
             postData: { poStatusValue: "all", shipmentValue: "CLOSED" },
             height: $(window).height() - 128,
             colModel: [
-                { label: '订单号', name: 'poNumber', width: 100, align: 'left' },
-                { label: '订单行号', name: 'poLineNum', width: 50, align: 'left' },
-                { label: '编码', name: 'itemCode', width: 80, align: 'left' },
-                { label: '描述', name: 'itemDescription', width: 350, align: 'left' },
-                { label: '数量', name: 'needQuantity', width: 80, align: 'left' },
+                {
+                    label: '订单号', name: 'poNumber', width: 100, align: 'left',
+                    formatter: function (cellvalue, options, rowObject) {
+                        return "<a onclick=\"viewDetails('" + cellvalue + "','" + rowObject.poLineNum + "')\" style='cursor:pointer;color:blue;'>" + cellvalue + "</a>";
+                    }
+                },
+                { label: '订单', name: 'poLineNum', width: 30, align: 'left' },
+                { label: '编码', name: 'itemCode', width: 70, align: 'left' },
+                { label: '描述', name: 'itemDescription', width: 450, align: 'left' },
+                { label: '需求数量', name: 'quantity', width: 80, align: 'left' },
+                { label: '已收货数量', name: 'quantityReceived', width: 80, align: 'left', hidden: true },
                 {
                     label: '下发日期', name: 'publishDate', width: 120, align: 'left',
                     formatter: "date", formatoptions: { srcformat: 'Y-m-d H:i:s', newformat: 'Y-m-d H:i:s' }
                 },
                 {
-                    label: '承诺日期', name: 'promiseDate', width: 80, align: 'left', editable:true,
+                    label: '承诺日期', name: 'promiseDate', width: 80, align: 'left',
                     formatter: "date", formatoptions: { srcformat: 'Y-m-d', newformat: 'Y-m-d' }
                 },
-                {label: '变更原因', name: 'promiseDateChangeReason', width: 80, align: 'left', editable: true},
+                { label: '币种', name: 'currencyCode', width: 50, align: 'left' },
+                { label: '单价', name: 'priceOverride', width: 50, align: 'left' },
+                { label: '数量', name: 'quantity', width: 50, align: 'left' },
                 {
-                    label: '有效日期', name: 'expireDate', width: 80, align: 'left',
-                    formatter: "date", formatoptions: { srcformat: 'Y-m-d', newformat: 'Y-m-d' }
+                    label: '小计', name: 'totalPrice', width: 50, align: 'left',
+                    formatter: function (cellvalue, options, rowObject) {
+                        return rowObject.quantity * rowObject.priceOverride;
+                    }
                 },
-                { label: '收货地点', name: 'shipToLocation', width: 350, align: 'left' },
-                { label: '采购员', name: 'agentName', width: 80, align: 'left' },
+                { label: '单位', name: 'unitOfMeasure', width: 50, align: 'left' },
+                { label: '收货地点', name: 'shipToLocation', width: 550, align: 'left' },
+                { label: '采购员', name: 'agentName', width: 250, align: 'left' },
                 { label: '备注', name: 'remark', width: 200, align: 'left' }
             ],
             pager: "#gridPager",
             multiselect: true,
-            rowNum: 20,
+            rowNum: 18,
             rowList: {},
             autoScroll: true,
             viewrecords: true,
@@ -51,13 +62,8 @@
                 var ids = $("#gridList").jqGrid("getGridParam", "selarrrow");
                 if ($.inArray(rowid, ids) >= 0) {
                     $("#choseNum").html(ids.length - 1);
-                    //$("#" + rowid + "_promiseDate").remove();
-                    //$("#" + rowid).find("td").eq(8).html($("#" + rowid).find("td").eq(8).attr("title"));
                 }
                 else {
-                    $("#gridList").editRow(rowid, true);
-                    $("#" + rowid + "_promiseDate").removeClass("form-control");
-                    $("#" + rowid + "_promiseDateChangeReason").removeClass("form-control");
                     $("#choseNum").html(ids.length + 1);
                 }
             },
@@ -72,33 +78,16 @@
         });
     }
 
-    function btn_update() {
-        var ids = $("#gridList").jqGrid("getGridParam", "selarrrow");
-        var promiseDate = new Array();
-        var promiseDateChangeReason = new Array();
-        for (var i = 0; i < ids.length; i++) {
-            promiseDate[i] = $('#' + ids[i] + '_promiseDate').val();
-            promiseDateChangeReason[i] = $('#' + ids[i] + '_promiseDateChangeReason').val();
-        }
-        ids = ids.join("#");
-        promiseDate = promiseDate.join("#");
-        promiseDateChangeReason = promiseDateChangeReason.join("#");
-        $.modalConfirm("您确定要提交这些订单变更么？", function (r) {
-            if (r) {
-                $.submitForm({
-                    url: "/HuaweiOrderManage/FindPOList/OnwayPOList",
-                    param: { ids: ids, promiseDate: promiseDate, promiseDateChangeReason: promiseDateChangeReason, types: "OnwayList" },
-                    success: function () {
-                        $('#ajax-loader').fadeIn();
-                        window.location.reload();
-                        //$.currentWindow().$("#gridList").trigger("reloadGrid");
-                    }
-                })
-            }
+    function viewDetails(poNumber, poLineNum) {
+        $.modalOpen({
+            id: "Details",
+            title: "订单详细信息",
+            url: "/HuaweiOrderManage/FindPOList/PODetails?poNumber=" + poNumber + "&poLineNum=" + poLineNum + "&types=NewPOList",
+            width: "700px",
+            height: "550px",
+            btn: null,
         });
-        
     }
-
 </script>
 <div id="ajax-loader">
     <img src="~/Content/img/ajax-loader.gif" />
@@ -115,8 +104,8 @@
             <ul class="nav nav-pills">
                 <li class="first">在途PO列表</li>
                 <li class="first">已选中<span id="choseNum">0</span>项</li>
-                <li><a id="NF-btn_details" authorize="yes" onclick="btn_update()"><i class="fa fa-pencil-square-o"></i>处理</a></li>
             </ul>
+            <a class="btn btn-primary refresh" onclick="$.reload()"><span class="glyphicon glyphicon-refresh"></span></a>
             <a href="javascript:;" class="close"></a>
         </div>
     </div>
