--- a/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/News.cshtml
+++ b/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/News.cshtml
@@ -14,7 +14,12 @@
             postData: { poStatusValue: "huaweiPublishOrder" },
             height: $(window).height() - 128,
             colModel: [
-                { label: '订单号', name: 'poNumber', width: 100, align: 'left' },
+                {
+                    label: '订单号', name: 'poNumber', width: 100, align: 'left',
+                    formatter: function (cellvalue, options, rowObject) {
+                        return "<a onclick=\"viewDetails('" + cellvalue + "','" + rowObject.poLineNum + "')\" style='cursor:pointer;color:blue;'>" + cellvalue + "</a>";
+                    }
+                },
                 { label: '行号', name: 'poLineNum', width: 30, align: 'left' },
                 { label: '编码', name: 'itemCode', width: 70, align: 'left' },
                 { label: '描述', name: 'itemDescription', width: 450, align: 'left' },
@@ -34,10 +39,6 @@
                     label: '承诺日期', name: 'promiseDate', width: 80, align: 'left',
                     formatter: "date", formatoptions: { srcformat: 'Y-m-d', newformat: 'Y-m-d' }
                 },
-                {
-                    label: '有效日期', name: 'expireDate', width: 80, align: 'left',
-                    formatter: "date", formatoptions: { srcformat: 'Y-m-d', newformat: 'Y-m-d' }
-                },
                 { label: '币种', name: 'currencyCode', width: 50, align: 'left' },
                 { label: '单价', name: 'priceOverride', width: 50, align: 'left' },
                 { label: '数量', name: 'quantity', width: 50, align: 'left' },
@@ -54,7 +55,7 @@
             ],
             pager: "#gridPager",
             multiselect: true,
-            rowNum: 20,
+            rowNum: 18,
             rowList: {},
             autoScroll: true,
             viewrecords: true,
@@ -109,16 +110,15 @@
         });
     }
 
-    function btn_exportPOPDF() {
-        var keyValue = $("#gridList").jqGrid("getGridParam", "selrow");
-        $.submitForm({
-            url: "/HuaweiOrderManage/FindPOList/ExportPOPDF",
-            param: { id: keyValue, types: "NewPOList" },
-            success: function (data) {
-                alert(data);
-            }
+    function viewDetails(poNumber, poLineNum) {
+        $.modalOpen({
+            id: "Details",
+            title: "订单详细信息",
+            url: "/HuaweiOrderManage/FindPOList/PODetails?poNumber=" + poNumber + "&poLineNum=" + poLineNum + "&types=NewPOList",
+            width: "700px",
+            height: "550px",
+            btn: null,
         });
-
     }
 </script>
 <div id="ajax-loader">
@@ -138,8 +138,8 @@
                 <li class="first">已选中<span id="choseNum">0</span>项</li>
                 <li><a id="NF-signBackPOList" authorize="yes" onclick="btn_signBackPOList(true)"><i class="fa fa-check"></i>PO签返（接受）</a></li>
                 <li><a id="NF-signBackPOList" authorize="yes" onclick="btn_signBackPOList(false)"><i class="fa fa-reply"></i>PO签返（驳回）</a></li>
-                <li><a id="NF-exportPOPDF" authorize="yes" onclick="btn_exportPOPDF()"><i class="fa fa-reply"></i>导出PDF</a></li>
             </ul>
+            <a class="btn btn-primary refresh" onclick="$.reload()"><span class="glyphicon glyphicon-refresh"></span></a>
             <a href="javascript:;" class="close"></a>
         </div>
     </div>
