--- a/KingPlatform/Content/css/framework-ui.css
+++ b/KingPlatform/Content/css/framework-ui.css
@@ -32,6 +32,7 @@
 .topPanel .toolbar .operate ul li i{margin-right:4px;font-size:13px;color: #666666;vertical-align: middle;margin-top: -1px;}
 .topPanel .toolbar .operate ul .first{position: relative;display: block;padding: 2px 15px;padding-right:10px;margin-top: 8px;margin-right:0px;border-right: 1px solid #c9c9c9;}
 .topPanel .toolbar .operate ul li.first > span{margin-left: 5px;margin-right:5px;}
+.topPanel .toolbar .operate .refresh{position: absolute;top:10px;right:40px;display:block;}
 .topPanel .toolbar .operate .close{position: absolute;top:18px;right:12px;display:block;height: 12px;width: 12px;background: url(../img/button_pm_close.png) left center no-repeat;}
 .topPanel .toolbar .operate .dropdown-menu{top: 24px;}
 .topPanel .toolbar .operate .dropdown-menu li{float:none;height: auto;}
@@ -87,4 +88,4 @@
 .POboardTotalnum {color:#00a5ff;}
 .red {color:red;}
 .remark ul {list-style: none;padding:0;}
- .remark ul li i {color:#00a5ff;}
+.remark ul li i {color:#00a5ff;}
