--- a/KingPlatform/Views/Shared/_Index.cshtml
+++ b/KingPlatform/Views/Shared/_Index.cshtml
@@ -14,6 +14,9 @@
     <script src="~/Content/js/jqgrid/grid.locale-cn.js"></script>
     <link href="~/Content/css/framework-ui.css" rel="stylesheet" />
     <script src="~/Content/js/framework-ui.js"></script>
+    <script src="~/Content/js/datepicker/bootstrap-datepicker.js"></script>
+    <link href="~/Content/js/datepicker/bootstrap-datepicker.min.css" rel="stylesheet" />
+    <script src="~/Content/js/datepicker/locales/bootstrap-datepicker.zh-CN.js"></script>
 </head>
 <body>
     @RenderBody()
